--- a/4.tex
+++ b/4.tex
@@ -24,10 +24,12 @@
 \newtheorem{definition}{Определение}
 \newtheorem{remark}{Замечание}
 
+\usepackage{amsmath}
+
 
 \begin{document}
 
-\include{title}
+%\include{title}
 
 \tableofcontents
 
