--- a/biblio.bib
+++ b/biblio.bib
@@ -1,7 +1,7 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF-8
 
-@ARTICLE{BA,
+@ARTICLE{base_article,
   author = {A.N. Grishkov
 	
 	F. Marko
@@ -10,10 +10,10 @@
   title = {Description of costandard modules for Schur superalgebra S(2|1) in
 	positive characteristic},
   journal = {Linear and Multilinear Algebra},
-  year = {2011},
+  year = {2010},
   volume = {59},
   pages = {57-64},
-  month = {January},
+  month = {April},
   owner = {zzi},
   timestamp = {2011.06.15}
 }
