--- a/content.tex
+++ b/content.tex
@@ -6,7 +6,7 @@
 %	\input{derivatives}
 
 \section{Неприводимые подмодули в $S(2|1)$}
-	\cite{base_article}
+	%\cite{base_article}
 	\input{irreducible_submodules}
 	
 \section{Композиционные ряды костандартных модулей в $S(2|1)$}
