refactor + first proof

--- a/4.tex
+++ b/4.tex
@@ -17,14 +17,14 @@
 
 \bibliographystyle{plain}
 
+\usepackage{amsmath, amsthm}
+
 \newtheorem{theorem}{Теорема}
 \newtheorem{lemma}{Лемма}
 \newtheorem{corollary}{Следствие}
 \newtheorem{proposition}{Утверждение}
 \newtheorem{definition}{Определение}
 \newtheorem{remark}{Замечание}
-
-\usepackage{amsmath}
 
 
 \begin{document}
