--- a/content.tex
+++ b/content.tex
@@ -5,9 +5,10 @@
 %	\input{data}
 %	\input{derivatives}
 
-\section{Неприводимые подмодули в $S(2|1)$}
+\section{Неприводимые подмодули в $S(2 \,|\, 1)$}
 	%\cite{base_article}
-	\input{irreducible_submodules}
-	
-\section{Композиционные ряды костандартных модулей в $S(2|1)$}
-	\input{composition_factors}
+	\input{irreducible_submodules/denotes}
+	\input{irreducible_submodules/proposition}
+\newpage
+\section{Композиционные ряды костандартных модулей в $S(2 \,|\, 1)$}
+	%\input{composition_factors}
