--- a/irreducible_submodules/denote_vectors.tex
+++ b/irreducible_submodules/denote_vectors.tex
@@ -12,4 +12,8 @@ $$ u_i = d^{\lambda_2} c_{11}^{\lambda_1 - \lambda_2 - i} c_{12}^i (c_{33}^{\lam
 веса $(\lambda_1 - i, \lambda_2 + i - 1\mid\lambda_3 + 1)$,
 
 $$ r_i = d^{\lambda_2} c_{11}^{\lambda_1 - \lambda_2 - i} c_{12}^i c_{33}^{\lambda_3} y_1 y_2 $$ 
-веса $(\lambda_1 - i - 1, \lambda_2 + i - 1\mid\lambda_3 + 2)$.
+веса $(\lambda_1 - i - 1, \lambda_2 + i - 1\mid\lambda_3 + 2)$. Они порождают $H^0 (\lambda)$ как суперпространство для любого (не обязательно полиномиального) старшего веса $\lambda$.
+
+Суперпроизводные $_{ij}D$ определяются следующим действием на элементах $A(2 \,|\, 1)$: $ (c_{kl}) {_{ij}D} = \delta_{li} c_{kl} $, где $\delta_{li}$ -- символ Кронекера.
+
+Обозначим через $\chi(\lambda)$ формальный характер простого модуля $L_{\lambda}$ и через $p_j (x_1, x_2) = \sum\limits_{0 \leq i \leq j} x_1^{i} x_2^{j - i}$ полную симметрическую функцию от $x_1, x_2$ степени $j$.
