--- a/title.tex
+++ b/title.tex
@@ -11,7 +11,9 @@
 	\vfill\vfill\vfill\vfill
 
 	\begin{center}
-		\LARGE\textbf{\textit{Бла-бла тема}}
+		\LARGE\textbf{\textit{Алгоритм вычисления формальных характеров 
+		                      неприводимых инъективных супермодулей 
+		                      над супералгеброй Шура $ S(2\,|\,1) $ }}
 	\end{center}
 
 	\vfill
@@ -24,33 +26,35 @@
 	
 	\begin{singlespace}
     \large {
-        {}\hspace{9.5cm}\textbf{\textit{Выполнил:}}
+        {}\hspace{8.4cm}\textbf{\textit{Выполнил:}}
 
-        {}\hspace{9.5cm}{студент группы МПС-703-О}
+        {}\hspace{8.4cm}{студент группы МПС-703-О}
 
-        {}\hspace{9.5cm}{специальности <<Прикладная}
+        {}\hspace{8.4cm}{специальности <<Прикладная}
 
-        {}\hspace{9.5cm}{математика и информатика>>}
+        {}\hspace{8.4cm}{математика и информатика>>}
 
-        {}\hspace{9.5cm}{\textbf{Д'Аламбер, Жан Лерон}} \vspace{2mm}
+        {}\hspace{8.4cm}{\textbf{Уляшев Павел Александрович}} 
+        
+        \vspace{2mm}
 
-        {}\hspace{9.5cm}{\underline{{}\hspace{5cm}{}}} \vspace*{-0.7mm}
+        {}\hspace{8.4cm}{\underline{{}\hspace{5cm}{}}} \vspace{-0.7mm}
 
-        {}\hspace{9.5cm}{\textit{(подпись студента)}}
+        {}\hspace{8.4cm}{\textit{(подпись студента)}}
 
         \vspace{10mm}
 
-        {}\hspace{9.5cm}{\textbf{\textit{Научный руководитель:}}}
+        {}\hspace{8.4cm}{\textbf{\textit{Научный руководитель:}}}
 
-        {}\hspace{9.5cm}{д.ф.-м.н., профессор}
+        {}\hspace{8.4cm}{д.ф.-м.н.}
 
-        {}\hspace{9.5cm}{\textbf{Коши, Огюстен Луи}}
+        {}\hspace{8.4cm}{\textbf{Зубков Александр Николаевич}}
 
         \vspace{2mm}
 
-        {}\hspace{9.5cm}{\underline{{}\hspace{5cm}{}}} \vspace{-0.7mm}
+        {}\hspace{8.4cm}{\underline{{}\hspace{5cm}{}}} \vspace{-0.7mm}
 
-        {}\hspace{9.5cm}{\textit{(подпись руководителя)}}
+        {}\hspace{8.4cm}{\textit{(подпись руководителя)}}
     }
     \end{singlespace}
 
