irreducible submodules done

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,9 +2,9 @@
 % Encoding: UTF-8
 
 @ARTICLE{base_article,
-  author = {A.N. Grishkov
+  author = {A.N. Grishkov,
 	
-	F. Marko
+	F. Marko,
 	
 	A.N. Zubkov},
   title = {Description of costandard modules for Schur superalgebra S(2|1) in
@@ -13,9 +13,91 @@
   year = {2010},
   volume = {59},
   pages = {57-64},
-  month = {April},
-  owner = {zzi},
-  timestamp = {2011.06.15}
+  month = {April}
+}
+
+@ARTICLE{donkin,
+  author = {S. Donkin},
+  title = {Symmetric and Exterior powers, linear source modules andrepresentations
+	of Schursuperalgebras},
+  journal = {London Mathematical Society},
+  year = {2001},
+  volume = {83},
+  pages = {647-680}
+}
+
+@ARTICLE{fmarko,
+  author = {F. Marko,
+	
+	A.N. Zubkov},
+  title = {Schur Superalgebras in Characteristic $p$},
+  journal = {London Mathematical Society},
+  year = {2006},
+  volume = {38},
+  pages = {99-112}
+}
+
+@ARTICLE{brundan_kujawa,
+  author = {J. Brundan,
+	
+	J. Kujawa},
+  title = {A New Proof of the Mullineux Conjecture},
+  journal = {Journal of Algebraic Combinatorics},
+  year = {2003},
+  volume = {18},
+  pages = {13-39}
+}
+
+@ARTICLE{steinberg_theorem,
+  author = {J. Kujawa},
+  title = {The Steinberg Tensor Product Theorem for $GL(m|n)$},
+  journal = {American Mathematical Society},
+  year = {2006},
+  volume = {413},
+  pages = {123-132}
+}
+
+@ARTICLE{la_scala,
+  author = {R.L. Scala,
+	
+	A.N. Zubkov},
+  title = {Costandard Modules Over Schur Superalgebras in Characteristic $p$},
+  journal = {Journal of Algebra and its Applications},
+  year = {2008},
+  volume = {7},
+  pages = {147-166},
+  number = {2},
+  month = {April}
+}
+
+@ARTICLE{affine_quotients,
+  author = {A.N. Zubkov},
+  title = {Affine Quotients of Supergroups},
+  journal = {Transformation Groups},
+  year = {2009},
+  volume = {14},
+  pages = {713-745},
+  number = {3}
+}
+
+@ARTICLE{some_properties_supergroups,
+  author = {А.Н. Зубков},
+  title = {О некоторых свойствах общих линейных супергрупп и супералгебр Шура},
+  journal = {Алгебра и логика},
+  year = {2006},
+  volume = {45},
+  pages = {257-299},
+  number = {3}
+}
+
+@ARTICLE{borel_subalgebras,
+  author = {А.Н. Зубков},
+  title = {Подалгебры Бореля супералгебр Шура},
+  journal = {Алгебра и логика},
+  year = {2005},
+  volume = {44},
+  pages = {305-334},
+  number = {3}
 }
 
 @comment{jabref-meta: selector_publisher:}
