--- a/content.tex
+++ b/content.tex
@@ -1,14 +1,23 @@
-\section*{Введение}
-	\input{introduction}
-
 %\section{Постановка задачи}
 %	\input{data}
 %	\input{derivatives}
 
+\section{Предварительные сведения}
+	%\input{preliminaries/superspaces}
+	%\input{preliminaries/weight}
+	%\input{preliminaries/borel_subalgebras}
+	%\input{preliminaries/glmn}
+
 \section{Неприводимые подмодули в $S(2 \,|\, 1)$}
-	%\cite{base_article}
-	\input{irreducible_submodules/denotes}
-	\input{irreducible_submodules/proposition}
-\newpage
+	\subsection{Основные понятия и обозначения}
+%		\input{irreducible_submodules/denotes}
+	\subsection{Теорема Стейнберга}	
+%		\input{irreducible_submodules/steinberg}
+	\subsection{Вычисление формальных характеров}
+%		\input{irreducible_submodules/lemma_ev}
+%		\input{irreducible_submodules/proposition}
+%\newpage
 \section{Композиционные ряды костандартных модулей в $S(2 \,|\, 1)$}
-	%\input{composition_factors}
+	\input{composition_factors}
+%\newpage
+%\section{Алгоритм вычисления формальных характеров неприводимых}
