--- a/irreducible_submodules/denotes.tex
+++ b/irreducible_submodules/denotes.tex
@@ -1,4 +1,7 @@
-Пусть $ \lambda = (\lambda_1, \lambda_2 \,|\, \lambda_3) $ -- полиномиальный вес и $L_{\lambda}$ - неприводимый подмодуль (цоколь) костандартного модуля $V = \nabla(\lambda)$ со старшим весом $\lambda$. Запишем разность $ \lambda_1 - \lambda_2 = pk + t $, где $ 0 \leq t < p $.
+Пусть $ \lambda = (\lambda_1, \lambda_2 \,|\, \lambda_3) $ -- полиномиальный вес и $L_{\lambda}$ - 
+неприводимый подмодуль костандартного модуля $V = \nabla(\lambda)$ со старшим весом $\lambda$. 
+Согласно \cite{brundan_kujawa} если вес $\lambda$ является старшим весом $ L_{\lambda} $, 
+то либо $ \lambda_2 > 0 $, либо $ \lambda_2 = 0 $ и $ p \,|\, \lambda_3 $.
 
 \begin{definition}
 Назовем вес $ \lambda = (\lambda_1, \lambda_2 \,|\, \lambda_3) $
@@ -15,7 +18,8 @@
 
 Определим следующие элементы:
 
-$$ v_i = d^{\lambda_2} c_{11}^{\lambda_1 - \lambda_2 - i} c_{12}^i (c_{33}^{\lambda_3} - \lambda_3 c_{33}^{\lambda_3 - 1} (c_{31} y_1 + c_{32} y_2) + \lambda_3 (\lambda_3 - 1) c_{33}^{\lambda_3 - 2} c_{31} y_1 c_{32} y_2) $$ 
+$$ v_i = d^{\lambda_2} c_{11}^{\lambda_1 - \lambda_2 - i} c_{12}^i (c_{33}^{\lambda_3} - 
+\lambda_3 c_{33}^{\lambda_3 - 1} (c_{31} y_1 + c_{32} y_2) + \lambda_3 (\lambda_3 - 1) c_{33}^{\lambda_3 - 2} c_{31} y_1 c_{32} y_2) $$ 
 веса $(\lambda_1 - i, \lambda_2 + i\mid\lambda_3)$,
 
 $$ w_i = d^{\lambda_2} c_{11}^{\lambda_1 - \lambda_2 - i} c_{12}^i (c_{33}^{\lambda_3} - \lambda_3 c_{33}^{\lambda_3 - 1} c_{32} y_2) y_1 $$ 
@@ -25,8 +29,12 @@ $$ u_i = d^{\lambda_2} c_{11}^{\lambda_1 - \lambda_2 - i} c_{12}^i (c_{33}^{\lam
 веса $(\lambda_1 - i, \lambda_2 + i - 1\mid\lambda_3 + 1)$,
 
 $$ r_i = d^{\lambda_2} c_{11}^{\lambda_1 - \lambda_2 - i} c_{12}^i c_{33}^{\lambda_3} y_1 y_2 $$ 
-веса $(\lambda_1 - i - 1, \lambda_2 + i - 1\mid\lambda_3 + 2)$. Они порождают $H^0 (\lambda)$ как суперпространство для любого (не обязательно полиномиального) старшего веса $\lambda$.
+веса $(\lambda_1 - i - 1, \lambda_2 + i - 1\mid\lambda_3 + 2)$. 
+Они порождают $H^0 (\lambda)$ как суперпространство для любого (не обязательно полиномиального) старшего веса $\lambda$. 
+Обоснование можно найти в \cite{some_properties_supergroups}.
 
-Суперпроизводные $_{ij}D$ определяются следующим действием на элементах $A(2 \,|\, 1)$: $ (c_{kl}) {_{ij}D} = \delta_{li} c_{kl} $, где $\delta_{li}$ -- символ Кронекера.
+Суперпроизводные $_{ij}D$ определяются следующим действием на элементах 
+$A(2 \,|\, 1)$: $ (c_{kl}) {_{ij}D} = \delta_{li} c_{kl} $, где $\delta_{li}$ -- символ Кронекера.
 
-Обозначим через $\chi(\lambda)$ формальный характер простого модуля $L_{\lambda}$ и через $p_j (x_1, x_2) = \sum\limits_{0 \leq i \leq j} x_1^{i} x_2^{j - i}$ полную симметрическую функцию от $x_1, x_2$ степени $j$.
+Обозначим через $\chi(\lambda)$ формальный характер простого модуля $L_{\lambda}$ 
+и через $p_j (x_1, x_2) = \sum\limits_{0 \leq i \leq j} x_1^{i} x_2^{j - i}$ полную симметрическую функцию от $x_1, x_2$ степени $j$.
