--- a/4.tex
+++ b/4.tex
@@ -29,11 +29,11 @@
 
 \begin{document}
 
-%\include{title}
+\include{title}
 
-%\section*{Введение}
-%	\input{introduction}
-%\newpage
+\section*{Введение}
+	\input{introduction}
+\newpage
 
 \tableofcontents
 
