--- a/irreducible_submodules/denotes.tex
+++ b/irreducible_submodules/denotes.tex
@@ -1,6 +1,6 @@
 Пусть $ \lambda = (\lambda_1, \lambda_2 \,|\, \lambda_3) $ -- полиномиальный вес и $L_{\lambda}$ - 
 неприводимый подмодуль костандартного модуля $V = \nabla(\lambda)$ со старшим весом $\lambda$. 
-Согласно \cite{brundan_kujawa} если вес $\lambda$ является старшим весом $ L_{\lambda} $, 
+Согласно \cite{brundan_kujawa}, если вес $\lambda$ является старшим весом $ L_{\lambda} $, 
 то либо $ \lambda_2 > 0 $, либо $ \lambda_2 = 0 $ и $ p \,|\, \lambda_3 $.
 
 \begin{definition}
@@ -13,6 +13,9 @@
 -- сильно критическим, если $ \lambda_2 + \lambda_3 \equiv 0 ~(\mbox{\textup{mod}}\,p). $
 \end{definition}
 
+\begin{remark} Если $\lambda$ -- критический, то $ t \neq p - 1 $, т.к. в противном случае \\
+$ \lambda_2 + \lambda_3 \equiv 0 ~(\mbox{\textup{mod}\, p}) $. 
+\end{remark}
 
 Обозначим $d = c_{11} c_{22} - c_{12} c_{21}, y_1 = \frac{c_{22} c_{13} - c_{12} c_{23}}{d}, y_2 = \frac{-c_{21} c_{13} + c_{11} c_{23}}{d}$
 
