--- a/irreducible_submodules/proposition.tex
+++ b/irreducible_submodules/proposition.tex
@@ -116,7 +116,7 @@ $$ \chi(\lambda) = (x_1 x_2)^{\lambda_2} x_3^{\lambda_3} [\,p_t (x_1, x_2) + p_{
 \end{proof}
 
 \begin{remark}
-Если $ \lambda_2 = 0 $, то $ \lambda_3 '' = 0 $, поэтому вес $\lambda$ является сильно критическим, поэтому
+Если $ \lambda_2 = 0 $, то $ \lambda_3 '' = 0 $, поэтому вес $\lambda$ является сильно критическим, следовательно
 $$ \chi(\lambda) = x_3^{\lambda_3} [\,p_t (x_1, x_2) + p_{t - 1} (x_1, x_2) x_3 \,] 
 \prod\limits_{i = 0}^{s}p_{k_i} ~(x_1^{p^{i + 1}}, x_2^{p^{i + 1}})
 $$
