--- a/preliminaries/borel_subalgebras.tex
+++ b/preliminaries/borel_subalgebras.tex
@@ -1,4 +1,13 @@
-Взято из \cite{borel_subalgebras}.
 
 Обозначим через $ B(r)^+ = B(m\,|\,n, r)^+ \quad (B(r)^- = B(m\,|\,n, r)^-) $ верхнетреугольную (соответственно, нижнетреугольную) 
-подалгебру Бореля в $S(r)$, порожденную (как векторное пространство) элементами 
+подалгебру Бореля в $ S(r) $, порожденную (как векторное пространство) элементами $ \xi_{IJ} $, где $ I \leq J$ (соответственно $ J \leq I$). 
+\begin{theorem}
+Супералгебра $ S(r) $ совпадает с произведением своих подалгебр Бореля $ B(r)^- B(r)^+ $. 
+\end{theorem}
+Обозначим подпространство алгебры $ B(r)^+ $, порожденное элементами $ \xi_{IJ}, I \leq J $, 
+такими, что $ i_k < j_k $ хотя бы длч одного номера $k$, через $ N(m\,|\,n, r)^+ = N(r)^+$. 
+Аналогично, только наоборот, для $ N(m\,|\,n, r)^- = N(r)^- $.
+
+\begin{theorem}
+Вес $\lambda$ допустим тогда и только тогда, когда найдется $ v \in I^{\lambda}(E)_{\lambda} \ 0 $ такой, что $ N(r)^+ v = 0 $.
+\end{theorem}
