--- a/preliminaries/glmn.tex
+++ b/preliminaries/glmn.tex
@@ -1,4 +1,3 @@
-Взято из \cite{some_properties_supergroups}.
 
 Обозначим через $ E(m\,|\,n) $ суперпространство с базисом $ e_1, \ldots, e_m, e_{m + 1}, \ldots, e_{m + n} $ 
 с чётной частью $ e_1, \ldots, e_m $ и нечётной частью $ e_{m + 1}, \ldots, e_{m + n} $. 
@@ -12,19 +11,19 @@ $ \delta_A (x_{ij}) = \sum\limits_{1 \leqslant k \leqslant m + n} x_{ik} \otimes
 Произвольная однородная компонента $ A(r) = A(m\,|\,n, r) $ является конечномерной суперкоалгеброй, а дуальное пространство $ A(r)^* $ -- супералгеброй, 
 которая называется \textit{супералгеброй Шура} и обозначается $ S(m\,|\,n, r) $.
 
-Матрицу из порождающих $x_{ij}$ обозначим $X$. Её блоки размера $ m \times m, m \times n, n \times m, n \times n $ обозначим соответственно 
-$ X_{11}, X_{12}, X_{21}, X_{22} $. Таким образом,
-$$ X = 
+Матрицу из порождающих $x_{ij}$ обозначим $C$. Её блоки размера $ m \times m, m \times n, n \times m, n \times n $ обозначим соответственно 
+$ C_{11}, C_{12}, C_{21}, C_{22} $. Таким образом,
+$$ C = 
 \begin{pmatrix}
-X_{11} & X_{12} \\
-X_{21} & X_{22} \\
+C_{11} & C_{12} \\
+C_{21} & C_{22} \\
 \end{pmatrix}.
 $$
 
 Локализуя $ A(m\,|\,n) $ по чётному элементу $ d = d_1 d_2, \: d_1 = det(X_{11}), \: d_2 = det(X_{22}) $, получим супералгебру Хопфа, 
 которая по определению является координатной алгеброй общей линейной супергруппы $ GL(m\,|\,n) $, т.е. $ A(m\,|\,n)_d = K[GL(m\,|\,n)] $.
 
-Gl(m\,|\,n) не является группой в обычном смысле, а является функтором, сопоставляющим произвольной коммутативной супералгебре $A$
+$ Gl(m\,|\,n) $ не является группой в обычном смысле, а является функтором, сопоставляющим произвольной коммутативной супералгебре $A$
 группу $ GL(m\,|\,n)(A) $, состоящую из всех обратимых $ (m + n) \times (m + n) $ матриц вида
 $$ A = 
 \begin{pmatrix}
@@ -33,4 +32,10 @@ A_{21} & A_{22} \\
 \end{pmatrix},
 $$
 где $ A_{11} \in GL(m)(A_0), \: A_{22} \in GL(n)(A_0)$, а коэффициенты блоков $ A_{12}, A_{21} $ нечётны. 
+Полная подкатегория однородных полиномиальных $GL(m\,|\,n)$-супермодулей степени $r$ тождественна категории 
+$ S(m\,|\,n) $-супермодулей.
 
+Суперпространство $ E(m\,|\,n) $ превращается в $GL(m\,|\,n)$-супермодуль по правилу 
+$$
+\tau_{E(m\,|\,n)}(e_i) = \sum \limits_{1 \leqslant k \leqslant m + n} e_k \otimes x_{ki}, \quad 1 \leqslant i \leqslant m + n.
+$$
