--- a/preliminaries/superspaces.tex
+++ b/preliminaries/superspaces.tex
@@ -1,6 +1,7 @@
-Взято из \cite{donkin}.
 
-Приведем определения супераналогов некоторых алгебраических систем. В общем случае суперизация достигается 
+Приведем определения супераналогов некоторых алгебраических систем, которые можно найти, 
+например, в \cite{donkin}, \cite{some_properties_supergroups}, \cite{la_scala}.
+В общем случае суперизация достигается 
 засчет введения $\mathbb{Z}_2$-градуировки, относительно которой все структурные функции однородны.
 
 \begin{definition}
@@ -17,10 +18,12 @@
 Супералгебра называется коммутативной, если $ \forall\, a,b \in A \quad ab = (-1)^{|a| |b|} ba $.
 \end{definition}
 Здесь прямыми скобками обозначена четность соответствующего элемента.
-Суперидеал $A$ -- это идеал алгебры, который одновременно является ее суперподпространством. 
 Суперподалгебра -- подалгебра, одновременно являющаяся суперподпространством. 
 \begin{definition}
 Пусть $A$ -- супералгебра. Супермодулем называется $A$-модуль $V$, которые также является суперпространством, 
 причем $ \forall \; a \in A \quad \forall v \in V \quad |av| = |a| ~+ ~|v| ~(\mbox{\textup{mod}}\,2) $.
 \end{definition}
-
+\begin{definition}
+Если $V$ -- суперпространство, то через $V^c$ обозначим сопряжённое суперпространство с $V_0^c = V_1, \: V_1^c = V_0 $.
+Полагаем по определению, что функтор смены чётности $ V \rightarrow V^c $ сохраняет модульную или комодульную структуру на $V$.
+\end{definition}
