--- a/title.tex
+++ b/title.tex
@@ -2,59 +2,64 @@
 	\newpage
 
 	\begin{center}
-    	\Large{Министерство образования и науки РФ \\
-		       ГОУ ОмГУ им. Ф.М. Достоевского \\}
-	    \large{Институт математики и информационных технологий \\*
+	    ФЕДЕРАЛЬНОЕ АГЕНТСТВО ПО ОБРАЗОВАНИЮ \\
+	    \vspace{3mm}
+    	Государственное образовательное учреждение \\
+		высшего профессионального образования\\
+	    \vspace{3mm}
+		Омский государственный университет им. Ф.М. Достоевского\\
+	    \vspace{3mm}
+	    \textit{Институт математики и информационных технологий \\*
 		       Кафедра алгебры}
 	\end{center}
 
 	\vfill\vfill\vfill\vfill
+	\begin{center}
+		\Large{Курсовая работа}
+	\end{center}
+	\vfill
 
 	\begin{center}
-		\LARGE\textbf{\textit{Алгоритм вычисления формальных характеров 
+		\Large\textbf{\textit{Алгоритм вычисления формальных характеров 
 		                      неприводимых инъективных супермодулей 
 		                      над супералгеброй Шура $ S(2\,|\,1) $ }}
 	\end{center}
 
-	\vfill
 
-	\begin{center}
-		\Large{Курсовая работа}
-	\end{center}
 	
 	\vfill\vfill\vfill\vfill
 	
 	\begin{singlespace}
     \large {
-        {}\hspace{8.4cm}\textbf{\textit{Выполнил:}}
+        {}\hspace{9.5cm}{\textit{Выполнил:}}
 
-        {}\hspace{8.4cm}{студент группы МПС-703-О}
+        {}\hspace{9.5cm}{студент группы МПС-703-О}
 
-        {}\hspace{8.4cm}{специальности <<Прикладная}
+        {}\hspace{9.5cm}{специальности <<Прикладная}
 
-        {}\hspace{8.4cm}{математика и информатика>>}
+        {}\hspace{9.5cm}{математика и информатика>>}
 
-        {}\hspace{8.4cm}{\textbf{Уляшев Павел Александрович}} 
+        {}\hspace{9.5cm}{Уляшев П.А.} 
         
         \vspace{2mm}
 
-        {}\hspace{8.4cm}{\underline{{}\hspace{5cm}{}}} \vspace{-0.7mm}
+        {}\hspace{9.5cm}{\underline{{}\hspace{5cm}{}}} \vspace{-0.7mm}
 
-        {}\hspace{8.4cm}{\textit{(подпись студента)}}
+        {}\hspace{9.5cm}{\textit{(подпись студента)}}
 
         \vspace{10mm}
 
-        {}\hspace{8.4cm}{\textbf{\textit{Научный руководитель:}}}
+        {}\hspace{9.5cm}{\textit{Научный руководитель:}}
 
-        {}\hspace{8.4cm}{д.ф.-м.н.}
+        {}\hspace{9.5cm}{д.ф.-м.н., профессор}
 
-        {}\hspace{8.4cm}{\textbf{Зубков Александр Николаевич}}
+        {}\hspace{9.5cm}{Зубков А.Н.}
 
         \vspace{2mm}
 
-        {}\hspace{8.4cm}{\underline{{}\hspace{5cm}{}}} \vspace{-0.7mm}
+        {}\hspace{9.5cm}{\underline{{}\hspace{5cm}{}}} \vspace{-0.7mm}
 
-        {}\hspace{8.4cm}{\textit{(подпись руководителя)}}
+        {}\hspace{9.5cm}{\textit{(подпись руководителя)}}
     }
     \end{singlespace}
 
